Fix internal iOS builds after r232198 https://bugs.webkit.org/show_bug.cgi?id=185986

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::sendTapHighlightForNodeIfNecessary):



Canonical link: https://commits.webkit.org/201427@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232200 268f45cc-cd09-0410-ab3c-d52691b4dbfc